--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache:
 install: true
 
 script:
-  - travis_wait 120 mvn -e -U -B clean install -fn 2>&1 | tee jersey-build.log | grep -E '(---)|(Building)|(Tests run)|(T E S T S)'
+  - travis_wait 120 mvn -e -U -B clean install -Ptravis_main -fn 2>&1 | tee jersey-build.log | grep -E '(---)|(Building)|(Tests run)|(T E S T S)'
   - echo '------------------------------------------------------------------------'
   - tail -100 jersey-build.log
+  - mvn -e -U -B clean install -Ptravis_e2e
