--- a/tests/e2e-testng/pom.xml
+++ b/tests/e2e-testng/pom.xml
@@ -45,6 +45,7 @@
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
                     <enableAssertions>false</enableAssertions>
+                    <skipTests>${run.e2e}</skipTests>
                 </configuration>
                 <dependencies>
                     <dependency>
