travis buid profile

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ cache:
 install: true
 
 matrix:
-  - TEST_SET="clean install -Ptravis_main"
-  - TEST_SET="clean install -Ptravis_e2e"
+  - TEST_SET=clean install -Ptravis_main
+  - TEST_SET=clean install -Ptravis_e2e
 
 script:
   - bash travis.sh $TEST_SET
