--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
     - .autoconf
 env:
   matrix:
-    - TEST_SET="-Ptravis_main"
+    - TEST_SET="-Ptravis_e2e_skip"
     - TEST_SET="-Ptravis_e2e"
 
 install: true
