travis buid profile

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,6 @@ language: java
 jdk:
   - oraclejdk8
 
-cache:
-  directories:
-    - .autoconf
-    - $HOME/.m2
-
-jobs:
-  include:
-    - stage: build
-      script: bash travis.sh -Ptravis_e2e_skip
-    - stage: test
-      script: bash travis.sh -Ptravis_e2e
+script: bash travis.sh
 
 install: true
