travis build profile

--- a/pom.xml
+++ b/pom.xml
@@ -1186,6 +1186,7 @@
             <id>travis_e2e_skip</id>
             <properties>
                 <skip.e2e>true</skip.e2e>
+                <exclude.sse.tests>**/BroadcasterTest*</exclude.sse.tests>
             </properties>
         </profile>
         <profile>
@@ -1202,6 +1203,7 @@
             <properties>
                 <skip.e2e>false</skip.e2e>
                 <skip.tests>true</skip.tests>
+                <exclude.sse.tests>**/BroadcasterTest*</exclude.sse.tests>
             </properties>
         </profile>
     </profiles>
@@ -1996,5 +1998,6 @@
         <xmlunit.version>1.6</xmlunit.version>
         <yasson.version>1.0.1</yasson.version>
         <skip.e2e>false</skip.e2e>
+        <exclude.sse.tests>nothing</exclude.sse.tests>
     </properties>
 </project>
