--- a/tests/e2e-entity/pom.xml
+++ b/tests/e2e-entity/pom.xml
@@ -42,6 +42,9 @@
                     <reuseForks>false</reuseForks>
                     <enableAssertions>false</enableAssertions>
                     <skipTests>${skip.e2e}</skipTests>
+                    <excludes>
+                        <exclude>${exclude.sse.tests}</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
