--- a/pom.xml
+++ b/pom.xml
@@ -1206,6 +1206,20 @@
                 <exclude.sse.tests>**/BroadcasterTest*</exclude.sse.tests>
             </properties>
         </profile>
+        <profile>
+            <!--
+             Profile is aimed to run problem tests (which are unstable and it's impossible to predict if they will pass
+             or fail) at the end of the whole Travis CI build process
+
+            the whole build is run as tests/e2e_entity -Ptravis_e2e_unstable
+            -->
+            <id>travis_e2e_unstable</id>
+            <properties>
+                <skip.e2e>false</skip.e2e>
+                <skip.tests>true</skip.tests>
+                <exclude.sse.tests>none</exclude.sse.tests>
+            </properties>
+        </profile>
     </profiles>
 
     <reporting>
