--- a/pom.xml
+++ b/pom.xml
@@ -2105,6 +2105,18 @@
         <jackson.version>2.10.1</jackson.version>
         <jackson1.version>1.9.13</jackson1.version>
         <javassist.version>3.25.0-GA</javassist.version>
+        <javax.annotation.version>1.2</javax.annotation.version>
+        <javax.annotation.bundle.version>1.2</javax.annotation.bundle.version>
+        <javax.el.version>2.2.4</javax.el.version>
+        <javax.el.impl.version>2.2.4</javax.el.impl.version>
+        <javax.interceptor.version>1.2</javax.interceptor.version>
+        <javax.persistence.version>1.0</javax.persistence.version>
+        <javax.validation.api.version>1.1.0.Final</javax.validation.api.version>
+        <jaxb.api.version>2.2.7</jaxb.api.version>
+        <jaxb.ri.version>2.2.7</jaxb.ri.version>
+        <jsonb.api.version>1.0</jsonb.api.version>
+        <jaxrs.api.spec.version>2.2-SNAPSHOT</jaxrs.api.spec.version>
+        <jaxrs.api.impl.version>2.2-SNAPSHOT</jaxrs.api.impl.version>
         <jboss.logging.version>3.3.0.Final</jboss.logging.version>
         <jersey1.version>1.19.3</jersey1.version>
         <jersey1.last.final.version>${jersey1.version}</jersey1.last.final.version>
