--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   matrix:
     - TEST_SET="-Ptravis_e2e_skip"
     - TEST_SET="-Ptravis_e2e"
+    - TEST_SET="-fn -Ptravis_e2e_no_fail"
 
 install: true
 
