--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
   matrix:
     - TEST_SET="-Ptravis_e2e_skip"
     - TEST_SET="-Ptravis_e2e"
-    - TEST_SET="-fn -Ptravis_e2e_no_fail"
+    - TEST_SET="-fn -Ptravis_e2e_no_fail -Dtest=BroadcasterTest,ClientCloseTest,ResponseWriterOutputStreamTest"
 
 install: true
 
