--- a/pom.xml
+++ b/pom.xml
@@ -1400,6 +1400,11 @@
                 <version>1.0.1</version>
             </dependency>
             <dependency>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>hk2-config</artifactId>
+                <version>${hk2.config.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.glassfish.hk2.external</groupId>
                 <artifactId>javax.inject</artifactId>
                 <version>${hk2.version}</version>
@@ -1927,7 +1932,7 @@
         <gf.impl.version>4.0</gf.impl.version>
         <fasterxml.classmate.version>1.3.3</fasterxml.classmate.version>
         <findbugs.glassfish.version>1.3</findbugs.glassfish.version>
-        <findbugs.version>3.0.2</findbugs.version>
+        <findbugs.version>3.0.3</findbugs.version>
         <freemarker.version>2.3.27-incubating</freemarker.version>
         <gae.version>1.9.59</gae.version>
         <gpg.mvn.plugin.version>1.6</gpg.mvn.plugin.version>
@@ -1936,17 +1941,18 @@
         <guava.version>18.0</guava.version>
         <hamcrest.version>1.3</hamcrest.version>
         <xmlunit.version>1.6</xmlunit.version>
-        <hk2.version>2.5.0-b42</hk2.version>
+        <hk2.version>2.5.0-b62</hk2.version>
+        <hk2.config.version>2.5.0-b56</hk2.config.version>
         <httpclient.version>4.5</httpclient.version> <!-- TODO: 4.5.2 doesn't work; apache client connector tests -->
-        <jackson.version>2.8.10</jackson.version>
+        <jackson.version>2.9.6</jackson.version>
         <jackson1.version>1.9.13</jackson1.version>
-        <javassist.version>3.22.0-CR2</javassist.version>
-        <javax.annotation.version>1.2</javax.annotation.version>
-        <javax.annotation.bundle.version>1.2</javax.annotation.bundle.version>
+        <javassist.version>3.22.0-GA</javassist.version>
+        <javax.annotation.version>1.3.2</javax.annotation.version>
+        <javax.annotation.bundle.version>1.3.2</javax.annotation.bundle.version>
         <javax.el.version>3.0.1-b06</javax.el.version>
         <javax.el.impl.version>3.0.1-b09</javax.el.impl.version>
-        <javax.interceptor.version>1.2</javax.interceptor.version>
-        <javax.persistence.version>1.0</javax.persistence.version>
+        <javax.interceptor.version>1.2.2</javax.interceptor.version>
+        <javax.persistence.version>1.0.2</javax.persistence.version>
         <javax.validation.api.version>2.0.1.Final</javax.validation.api.version>
         <jaxb.api.version>2.2.7</jaxb.api.version>
         <jaxb.ri.version>2.2.7</jaxb.ri.version>
@@ -1969,10 +1975,9 @@
         <jta.api.version>1.2</jta.api.version>
         <kryo.version>4.0.1</kryo.version>
         <logback.version>1.2.3</logback.version>
-        <mimepull.version>1.9.6</mimepull.version>
+        <mimepull.version>1.9.7</mimepull.version>
         <mockito.version>1.10.19</mockito.version>
         <moxy.version>2.6.4</moxy.version>
-        <mockito.version>1.10.19</mockito.version>
         <mustache.version>0.8.17</mustache.version>
         <netty.version>4.1.5.Final</netty.version>
         <nexus-staging.mvn.plugin.version>1.6.7</nexus-staging.mvn.plugin.version>
