JAXB API version upgrade (broken OSGi)
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>

--- a/core-common/pom.xml
+++ b/core-common/pom.xml
@@ -167,6 +167,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
