--- a/core-common/src/main/resources/org/glassfish/jersey/internal/localization.properties
+++ b/core-common/src/main/resources/org/glassfish/jersey/internal/localization.properties
@@ -190,3 +190,4 @@ warning.provider.constrainedTo.wrong.package=A registered provider {0} constrain
 # {0} - List of arbitrary localized messages, e.g.: [FATAL] <localized_message>; source=<object>
 warnings.detected=The following warnings have been detected: {0}
 warning.properties=System properties configuration provider not allowed
+system.properties.warning=Could not read system properties
