--- a/ext/microprofile/config/pom.xml
+++ b/ext/microprofile/config/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.eclipse.microprofile.config</groupId>
             <artifactId>microprofile-config-api</artifactId>
-            <version>${microprofile-api.version}</version>
+            <version>${config.version}</version>
         </dependency>
 
         <dependency>
