--- a/pom.xml
+++ b/pom.xml
@@ -2043,9 +2043,9 @@
         <weld3.version>3.0.0.Final</weld3.version>
         <xerces.version>2.11.0</xerces.version>
         <yasson.version>1.0.3</yasson.version>
-        <helidon.version>1.0.2</helidon.version>
-        <microprofile-api.version>1.2.1</microprofile-api.version>
-        <smallrye.version>1.3.5</smallrye.version>
+        <helidon.version>1.0.3</helidon.version>
+        <config.version>1.2.1</config.version>
+        <smallrye.version>1.3.6</smallrye.version>
         <skip.e2e>false</skip.e2e>
     </properties>
 </project>
