--- a/tests/integration/microprofile/config/smallrye/pom.xml
+++ b/tests/integration/microprofile/config/smallrye/pom.xml
@@ -37,6 +37,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.jersey.ext</groupId>
+            <artifactId>config</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.smallrye</groupId>
             <artifactId>smallrye-config</artifactId>
             <version>${smallrye.version}</version>
