tck config suite
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>

--- a/tests/integration/pom.xml
+++ b/tests/integration/pom.xml
@@ -136,6 +136,7 @@
         <module>tracing-support</module>
         <module>microprofile/config/helidon</module>
         <module>microprofile/config/smallrye</module>
+        <module>microprofile/config/tck</module>
         <module>microprofile/config/webapp</module>
     </modules>
 
