--- a/tests/osgi/functional/pom.xml
+++ b/tests/osgi/functional/pom.xml
@@ -50,7 +50,6 @@
                             <testExcludes>
                                 <exclude>org/glassfish/jersey/osgi/test/basic/JsonMoxyTest.java</exclude>
                                 <exclude>org/glassfish/jersey/osgi/test/basic/JsonProcessingTest.java</exclude>
-                                <exclude>org/glassfish/jersey/osgi/test/basic/JsonJackson1Test.java</exclude>
                             </testExcludes>
                         </configuration>
                     </execution>
@@ -207,11 +206,6 @@
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson1</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jettison</artifactId>
             <scope>test</scope>
         </dependency>
@@ -353,27 +347,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-jaxrs</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-xc</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-osgi</artifactId>
             <scope>test</scope>
@@ -409,7 +382,6 @@
                             <excludes>
                                 <exclude>org/glassfish/jersey/osgi/test/basic/JsonMoxyTest.java</exclude>
                                 <exclude>org/glassfish/jersey/osgi/test/basic/JsonProcessingTest.java</exclude>
-                                <exclude>org/glassfish/jersey/osgi/test/basic/JsonJackson1Test.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
@@ -428,6 +400,32 @@
                     <version>${jakarta.activation.version}</version>
                 </dependency>
             </dependencies>
+            <!--<build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            &lt;!&ndash; Exclude unit tests on jdk 11 for now &ndash;&gt;
+                            <excludes>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/ApacheOsgiIntegrationTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/BasicOsgiIntegrationTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/BeanValidationTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/JaxRsRiBundleTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/JsonJacksonTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/JsonJettisonTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/JsonMoxyTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/JsonProcessingTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/MultiPartTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/PackageScanningTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/ResourceBundleTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/SseTest.java</exclude>
+                                <exclude>org/glassfish/jersey/osgi/test/basic/WebResourceFactoryTest.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>-->
         </profile>
         <profile>
             <id>sonar</id>
