jakartification: tests excluded due to missing javax.xml.bind.annotation.* property
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>

--- a/examples/json-jackson/pom.xml
+++ b/examples/json-jackson/pom.xml
@@ -63,6 +63,16 @@
                     <mainClass>org.glassfish.jersey.examples.jackson.App</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- TODO remove after jakartification -->
+                <configuration>
+                    <excludes>
+                        <exclude>org/glassfish/jersey/examples/jackson/JacksonTest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
