--- a/examples/server-async-managed/pom.xml
+++ b/examples/server-async-managed/pom.xml
@@ -56,6 +56,16 @@
                     <mainClass>org.glassfish.jersey.examples.server.async.managed.App</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <!-- TODO remove after jakartification -->
+            <configuration>
+                <excludes>
+                    <exclude>org/glassfish/jersey/examples/server/async/managed/ManagedAsyncResourceTest.java</exclude>
+                </excludes>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
 
