--- a/tests/e2e-entity/pom.xml
+++ b/tests/e2e-entity/pom.xml
@@ -56,6 +56,17 @@
                         <exclude>org/glassfish/jersey/tests/e2e/entity/filtering/json/JsonEmptyEntityTest.java</exclude>
                     </excludes>
                 </configuration>
+                <!-- TODO remove after jakartification -->
+                <executions>
+                    <execution>
+                        <id>default-test</id> <!-- jakartification-excluded-tests -->
+                        <configuration>
+                            <excludes>
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/MultipartTest.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
