--- a/tests/e2e-entity/pom.xml
+++ b/tests/e2e-entity/pom.xml
@@ -63,6 +63,14 @@
                         <configuration>
                             <excludes>
                                 <exclude>org/glassfish/jersey/tests/e2e/entity/MultipartTest.java</exclude>
+                                <!--JDK 8 -->
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/CharsetTest.java</exclude>
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/EmptyRequestWithJaxbTest*</exclude>
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/EntityTypesTest.java</exclude>
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/JAXBContextResolverTest.java</exclude>
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/JAXBContextResolverTest*</exclude>
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/XXETest.java</exclude>
+                                <exclude>org/glassfish/jersey/tests/e2e/entity/XmlJaxBElementProviderTest.java</exclude>
                             </excludes>
                         </configuration>
                     </execution>
