--- a/core-server/pom.xml
+++ b/core-server/pom.xml
@@ -249,6 +249,30 @@
             </dependencies>
         </profile>
         <profile>
+            <id>jdk8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <!-- TODO remove after jakartification -->
+                        <configuration>
+                            <excludes> <!--JDK 8 -->
+                                <exclude>org/glassfish/jersey/server/filter/FilterSetMethodTest.java</exclude>
+                                <exclude>org/glassfish/jersey/server/internal/inject/FormParamTest.java</exclude>
+                                <exclude>org/glassfish/jersey/server/model/OptionsSubResourceMethodTest.java</exclude>
+                                <exclude>org/glassfish/jersey/server/model/OptionsTest.java</exclude>
+                                <exclude>org/glassfish/jersey/server/wadl/generators/resourcedoc/WadlGeneratorResourceDocSupportTest.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>securityOff</id>
             <properties>
                 <surefire.security.argline />
