--- a/tests/e2e-client/pom.xml
+++ b/tests/e2e-client/pom.xml
@@ -221,6 +221,26 @@
             </properties>
         </profile>
         <profile>
+            <id>jdk8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <!-- TODO remove after jakartification -->
+                        <configuration>
+                            <excludes> <!--JDK 8 -->
+                                <exclude>org/glassfish/jersey/tests/e2e/client/BasicClientTest.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>xdk</id>
             <properties>
                 <!-- do not use security manager for xdk -->
