--- a/pom.xml
+++ b/pom.xml
@@ -805,18 +805,27 @@
         </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.commonjava.maven.plugins</groupId>
-                <artifactId>directory-maven-plugin</artifactId>
-                <version>0.3.1</version>
+                <groupId>org.codehaus.gmaven</groupId>
+                <artifactId>groovy-maven-plugin</artifactId>
+                <version>2.1.1</version>
                 <executions>
                     <execution>
                         <id>directories</id>
                         <goals>
-                            <goal>highest-basedir</goal>
+                            <goal>execute</goal>
                         </goals>
                         <phase>initialize</phase>
                         <configuration>
-                            <property>legal.source.folder</property>
+                            <source>
+                                <![CDATA[
+                                def rootPom = project;
+                                while (rootPom.parent.groupId != "org.eclipse.ee4j") {
+                                    rootPom = rootPom.parent;
+                                }
+                                project.properties.setProperty("legal.source.folder", rootPom.basedir.toString());
+                                log.info("Jersey main folder for legal files [legal.source.folder]:  " + project.properties['legal.source.folder']);
+                                ]]>
+                            </source>
                         </configuration>
                     </execution>
                 </executions>
